style: fix vertical spacing

--- a/week-5/W5-S1-HTTP-3rdPartyAPIs/challenge/assets/css/style.css
+++ b/week-5/W5-S1-HTTP-3rdPartyAPIs/challenge/assets/css/style.css
@@ -20,6 +20,10 @@ body {
 
 .input-section {
     margin-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-items: center;
 }
 
 input {
